Add deadlines to the build

--- a/materials.html
+++ b/materials.html
@@ -59,21 +59,22 @@
 									<h2>Menu</h2>
 								</header>
 								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="index.html#speakers">Speakers</a></li>
-									<li><a href="index.html#orga">Organization</a></li>
-									<li><a href="instructions.html">Taking part</a></li>
-									<li><a href="materials.html">Materials</a></li>
-									<!-- <li>
-										<span class="opener">Submenu</span>
-										<ul>
-											<li><a href="#">Lorem Dolor</a></li>
-											<li><a href="#">Ipsum Adipiscing</a></li>
-											<li><a href="#">Tempus Magna</a></li>
-											<li><a href="#">Feugiat Veroeros</a></li>
-										</ul>
-									</li> -->
-								</ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html#deadlines">Deadlines</a></li>
+										<li><a href="index.html#speakers">Speakers</a></li>
+										<li><a href="index.html#orga">Organization</a></li>
+										<li><a href="instructions.html">Taking part</a></li>
+										<li><a href="materials.html">Materials</a></li>
+										<!-- <li>
+											<span class="opener">Submenu</span>
+											<ul>
+												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="#">Ipsum Adipiscing</a></li>
+												<li><a href="#">Tempus Magna</a></li>
+												<li><a href="#">Feugiat Veroeros</a></li>
+											</ul>
+										</li> -->
+									</ul>
 							</nav>
 
 
