--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 								<hr class="major" />
 
 							<!-- Section -->
+								<section, id="deadlines">
+									<header class="major">
+										<h2>Deadlines</h2>
+									</header>
+										<p>
+											Coming Soon
+										</p>
+								</section>
+
 								<section, id="speakers">
 									<header class="major">
 										<h2>Speakers</h2>
@@ -215,6 +224,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html#deadlines">Deadlines</a></li>
 										<li><a href="index.html#speakers">Speakers</a></li>
 										<li><a href="index.html#orga">Organization</a></li>
 										<li><a href="instructions.html">Taking part</a></li>
