--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>E</strong>mpowering <strong>ME</strong>dical image computing & <strong>R</strong>esearch through early-career <strong>E</strong>xpertise</a>
 									<ul class="icons">
-										<li><a href="https://twitter.com/ContinualMedAI" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://x.com/MiccaiStudents?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<!--
 										<li><a href="https://github.com/ContinualMedAI" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									-->
