--- a/materials.html
+++ b/materials.html
@@ -25,7 +25,7 @@
 							<header id="header">
 								<a href="index.html" class="logo"><strong></strong> <strong>Materials</strong></a>
 								<ul class="icons">
-									<li><a href="https://twitter.com/ContinualMedAI" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://x.com/MiccaiStudents?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								
 								</ul>
 							</header>
