added timetable for the deadlines

--- a/index.html
+++ b/index.html
@@ -65,8 +65,43 @@
 										<h2>Deadlines</h2>
 									</header>
 										<p>
-											Coming Soon
+											All dates are in <a href="https://en.wikipedia.org/wiki/Pacific_Time_Zone" target="_blank">Pacific Time Zone (PT)</a>
 										</p>
+										<table border="2">
+											  <!-- <caption>Deadlines</caption> -->
+											  <tr>
+											    <td>May 1, 2024</td>
+											    <td>Call for papers</td>
+											  </tr>
+											  <tr>
+											    <td>June 1, 2024</td>
+											    <td>Submission Portal Open</td>
+											  </tr>
+											  <tr>
+											    <td>June 24, 2024</td>
+											    <td>Paper Submission Deadline</td>
+											  </tr>
+											  <tr>
+											    <td>July 08, 2024</td>
+											    <td>Reviews due</td>
+											  </tr>
+											  <tr>
+											    <td>July 12, 2024</td>
+											    <td>Reviews released to the authors</td>
+											  </tr>
+											  <tr>
+											    <td>July 16, 2024</td>
+											    <td>Rebuttals due</td>
+											  </tr>
+											  <tr>
+											    <td>July 19, 2024</td>
+											    <td>Final Decision</td>
+											  </tr>
+											  <tr>
+											    <td>July 26, 2024</td>
+											    <td>Camer ready submissions due</td>
+											  </tr>
+										</table>
 								</section>
 
 								<section, id="speakers">
