updated descriptions and profile pictures

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 									<a href="index.html" class="logo"><strong>E</strong>mpowering <strong>ME</strong>dical image computing & <strong>R</strong>esearch through early-career <strong>E</strong>xpertise</a>
 									<ul class="icons">
 										<li><a href="https://x.com/MiccaiStudents?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<!--
-										<li><a href="https://github.com/ContinualMedAI" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									-->
 									
 									</ul>
 								</header>
@@ -45,7 +42,7 @@
 
 									</div>
 									<span class="image object">
-										<img src="images/logos/logo_daicow_horizontalss.png" alt="" />
+										<img src="images/logos/logo_EMERGE.jpg" alt="" />
 									</span>
 								</section>
 
@@ -125,11 +122,11 @@
 								</header>
 								<div class="features">
 									<article>
-										<span class="image object"><img src="images/pictures/CamilaGonzalez_scaled.png" alt="" width="150" height="150"/></span>
+										<span class="image object"><img src="images/pictures/naren_akash.png" alt="" width="150" height="150"/></span>
 										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
 											<h3>Naren Akash</h3>
 											<p>IIIT Hyderabad</p>
-											
+											<a href="https://researchweb.iiit.ac.in/~naren.akash/">Website</a>
 										</div>
 									</article>
 									<article>
@@ -137,7 +134,7 @@
 										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
 											<h3>Moritz Fuchs</h3>
 											<p>Technical University of Darmstadt</p>
-											<a href="https://scholar.google.de/citations?user=MlDSA9sAAAAJ&hl=de">Website</a>
+											<a href="https://www.informatik.tu-darmstadt.de/gris/startseite_1/team/team_details_107584.de.jsp">Website</a>
 										</div>
 									</article>
 									<article>
@@ -228,7 +225,7 @@
 									</article>
 
 									<article>
-										<span class="image object"><img src="images/pictures/Benjamin Killeen.jpeg" alt="" width="150" height="150"/></span>
+										<span class="image object"><img src="images/pictures/constantin_ulrich.jpg" alt="" width="150" height="150"/></span>
 										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
 											<h3>Constantin Ulrich</h3>
 											<p>German cancer Research Center (DKFZ)</p>
