--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 									<div class="content">
 										<header>
 											<h1>EMERGE<br /></h1>
-											<p>The 1st MICCAI Workshop on</p>
+											<p>The 1st MICCAI Student Board Workshop</p>
 										</header>
-										<p>TBD</p>
-										<p>Upcoming.</p>
+										<p>Empowering student researchers in medical imaging through collaborative dialogue and mentorship at the EMERGE workshop.</p>
+										<p>We want to foster the educational and professional development needs of early-career researchers and support them in their journey to become independent investigators and mentors. In this workshop, students are primary investigators and occupy the first and/or last author positions on a short paper.</p>
 
 									</div>
 									<span class="image object">
@@ -62,14 +62,14 @@
 										<h2>Deadlines</h2>
 									</header>
 										<p>
-											All dates are in <a href="https://en.wikipedia.org/wiki/Pacific_Time_Zone" target="_blank">Pacific Time Zone (PT)</a>
+											All dates are in <a href="https://en.wikipedia.org/wiki/Pacific_Time_Zone" target="_blank">23:59 Pacific Time Zone (PT)</a>
 										</p>
 										<table border="2">
 											  <!-- <caption>Deadlines</caption> -->
-											  <tr>
+											  <!-- <tr>
 											    <td>May 1, 2024</td>
 											    <td>Call for papers</td>
-											  </tr>
+											  </tr> -->
 											  <tr>
 											    <td>June 1, 2024</td>
 											    <td>Submission Portal Open</td>
@@ -78,10 +78,10 @@
 											    <td>June 24, 2024</td>
 											    <td>Paper Submission Deadline</td>
 											  </tr>
-											  <tr>
+											  <!-- <tr>
 											    <td>July 08, 2024</td>
 											    <td>Reviews due</td>
-											  </tr>
+											  </tr> -->
 											  <tr>
 											    <td>July 12, 2024</td>
 											    <td>Reviews released to the authors</td>
@@ -94,10 +94,10 @@
 											    <td>July 19, 2024</td>
 											    <td>Final Decision</td>
 											  </tr>
-											  <tr>
+											  <!-- <tr>
 											    <td>July 26, 2024</td>
 											    <td>Camer ready submissions due</td>
-											  </tr>
+											  </tr> -->
 										</table>
 								</section>
 
@@ -198,8 +198,8 @@
 									</article>
 
 									<article>
-										<span class="image object"><img src="images/pictures/AdvaithVeturi.jpg" alt="" width="150" height="150"/></span>
-										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
+										<span class="image object"><img src="images/pictures/AdvaithVeturi.jpg" alt="" width="150" height="150" style="transform-origin: 100 100; left: 20px;" /></span>
+										<div class="content" style="vertical-align:middle;margin-left:15px;margin-top:5px">
 											<h3>Advaith Veturi</h3>
 											<p>University of Colorado Anschutz Medical Campus</p>
 											<a href="https://machinelearningandme.wordpress.com/">Website</a>
@@ -259,8 +259,8 @@
 										<li><a href="index.html#deadlines">Deadlines</a></li>
 										<li><a href="index.html#speakers">Speakers</a></li>
 										<li><a href="index.html#orga">Organization</a></li>
-										<li><a href="instructions.html">Taking part</a></li>
-										<li><a href="materials.html">Materials</a></li>
+										<!-- <li><a href="instructions.html">Taking part</a></li>
+										<li><a href="materials.html">Materials</a></li> -->
 										<!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
