update the logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 
 							<!-- Banner -->
 								<section id="banner">
-									<div class="content">
+									<div class="content"> 
+										<style>
+											#banner .content p {
+												text-align: justify;
+											}
+										</style>
 										<header>
 											<h1>EMERGE<br /></h1>
 											<p>The 1st MICCAI Student Board Workshop</p>
@@ -42,6 +47,7 @@
 
 									</div>
 									<span class="image object">
+										
 										<img src="images/logos/logo_EMERGE.jpg" alt="" />
 									</span>
 								</section>
