Update the summary

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										</style>
 										<header>
 											<h1>EMERGE<br /></h1>
-											<p>The 1st MICCAI Student Board Workshop</p>
+											<p>The 1st MICCAI Student Board (MSB) Workshop</p>
 										</header>
 										<p>Empowering student researchers in medical imaging through collaborative dialogue and mentorship at the EMERGE workshop.</p>
 										<p>We want to foster the educational and professional development needs of early-career researchers and support them in their journey to become independent investigators and mentors. In this workshop, students are primary investigators and occupy the first and/or last author positions on a short paper.</p>
@@ -57,7 +57,31 @@
 									<header class="major">
 										<h2>Summary</h2>
 									</header>
-									<p>Coming Soon</p>
+									<style>
+										.inner {
+											text-align: justify;
+										}
+									</style>
+									<p>The EMERGE workshop is an exciting new event at the MICCAI 2024 conference, offering a platform for early-career researchers within 
+										the MICCAI community to showcase their work. The workshop is tailored to projects where students have a leading role in the research 
+										project, encouraging early-career researchers as the main researchers. 
+										This workshop is a student-led initiative, organized by the <strong> MICCAI Student Board</strong>, with a panel of experienced researchers 
+										from the MICCAI community. The workshop is an opportunity for students to get feedback from our experienced panel, who will actively engage 
+										with student presentations at the workshop.  This student-led initiative reflects a commitment to empowering the next generation of 
+										researchers, providing them with an opportunity to present and discuss their ongoing projects - fostering constructive feedback and 
+										meaningful scientific discourse. Our workshop aims to highlight works from students from around the world, with a special focus on 
+										those in underrepresented regions, including Morocco and other African nations. </p>
+									<p>The scope of the workshop spans the areas of Medical Image Computing (MIC) and Computer-Assisted Interventions (CAI), aligned with the 
+										scientific focus of the MICCAI Society. We encourage the development and implementation of advanced algorithms to solve a variety of 
+										problems in medical imaging, encompassing a spectrum of imaging modalities, including MRI, ultrasound, X-ray, microscopy, OCT, nuclear 
+										medicine, among others. The event is welcome to students at the undergraduate, master's, and doctoral levels - with an emphasis on works 
+										where the student is the primary contributor.</p>
+									<p> The EMERGE workshop will be held on <strong>6 October 2024</strong> as an in-person, full day satellite event of MICCAI 2024 at the 
+										Palmeraie Conference Centre in Marrakesh, Morocco. This in-person format allows for early-stage research discussions and student networking, 
+										providing an environment conducive to meaningful exchanges and collaborations. The workshop will conclude with an awards ceremony recognizing
+										outstanding presentations and research works. In addition to these sessions, two successful early-career independent researchers will deliver
+										keynote speeches, offering insights into career development paths within the field and an education-focused talk on effective approaches to impactful
+										 research.</p>
 											
 
 								<hr class="major" />
