--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										problems in medical imaging, encompassing a spectrum of imaging modalities, including MRI, ultrasound, X-ray, microscopy, OCT, nuclear 
 										medicine, among others. The event is welcome to students at the undergraduate, master's, and doctoral levels - with an emphasis on works 
 										where the student is the primary contributor.</p>
-									<p> The EMERGE workshop will be held on <strong>6 October 2024</strong> as an in-person, full day satellite event of MICCAI 2024 at the 
+									<p> The EMERGE workshop will be held on <strong>6 October 2024</strong> as an in-person, half day satellite event of MICCAI 2024 at the 
 										Palmeraie Conference Centre in Marrakesh, Morocco. This in-person format allows for early-stage research discussions and student networking, 
 										providing an environment conducive to meaningful exchanges and collaborations. The workshop will conclude with an awards ceremony recognizing
 										outstanding presentations and research works. In addition to these sessions, two successful early-career independent researchers will deliver
