--- a/index.html
+++ b/index.html
@@ -263,6 +263,34 @@
 										</div>
 									</article>
 
+									<article>
+										<span class="image object"><img src="images/pictures/CamilaGonzalez_scaled.png" alt="" width="150" height="150"/></span>
+										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
+											<h3>Camila Gonzalez</h3>
+											<p>Stanford University</p>
+											<a href="https://profiles.stanford.edu/320362;jsessionid=4CEDAFC89FAF2B85F2C1F1EEB589B0A2.cap-su-capappprd97">Website</a>
+										</div>
+									</article>
+									</article>
+
+									<article>
+										<span class="image object"><img src="images/pictures/antonio.png" alt="" width="150" height="150"/></span>
+										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
+											<h3>Antonio R. Porras</h3>
+											<p>University of Colorado Anschutz Medical Campus</p>
+											<a href="https://arporras.com/">Website</a>
+										</div>
+									</article>
+
+									<article>
+										<span class="image object"><img src="images/pictures/anees.jpg" alt="" width="150" height="150"/></span>
+										<div class="content" style="vertical-align:middle;margin-left:5px;margin-top:5px">
+											<h3>Anees Kazi</h3>
+											<p>Massachusetts General Hospital, Harvard Medical School</p>
+											<a href="https://scholar.google.de/citations?hl=en&user=G8Js7CsAAAAJ">Website</a>
+										</div>
+									</article>
+
 								</div>
 							</section>		
 						</div>
