--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 											    <td>Call for papers</td>
 											  </tr> -->
 											  <tr>
+											    <td>May 6, 2024</td>
+											    <td>Call for Papers</td>
+											  </tr>
+											  <tr>
 											    <td>June 1, 2024</td>
 											    <td>Submission Portal Open</td>
 											  </tr>
@@ -113,15 +117,15 @@
 											    <td>Reviews due</td>
 											  </tr> -->
 											  <tr>
-											    <td>July 12, 2024</td>
+											    <td>July 8, 2024</td>
 											    <td>Reviews released to the authors</td>
 											  </tr>
 											  <tr>
-											    <td>July 16, 2024</td>
+											    <td>July 12, 2024</td>
 											    <td>Rebuttals due</td>
 											  </tr>
 											  <tr>
-											    <td>July 19, 2024</td>
+											    <td>July 15, 2024</td>
 											    <td>Final Decision</td>
 											  </tr>
 											  <!-- <tr>
