--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 											<p>The 1st MICCAI Student Board (MSB) Workshop</p>
 										</header>
 										<p>Empowering student researchers in medical imaging through collaborative dialogue and mentorship at the EMERGE workshop.</p>
-										<p>We want to foster the educational and professional development needs of early-career researchers and support them in their journey to become independent investigators and mentors. In this workshop, students are primary investigators and occupy the first and/or last author positions on a short paper.</p>
-
+										<p>We want to foster the educational and professional development needs of early-career researchers and support them in their journey to become independent investigators and mentors. This workshop, organized by students for students, requires early-career researchers to be primary investigators and occupy the first and last author positions on an 8-page paper.</p>
 									</div>
 									<span class="image object">
 										
