--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 								<ul class="contact">
 									<li class="icon solid fa-envelope">miccaimsb@gmail.com</a></li>
 									<!-- <li class="icon solid fa-phone">(+49)  </li> -->
-									<li class="icon solid fa-home">Marrakesh, Morocco </br> ---</li>
+									<li class="icon solid fa-home">Marrakesh, Morocco </br> October 6, 2024</li>
 								</ul>
 							</section>
 
