Extension granted for the submission
Change the dates for the submission

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 											    <td>Submission Portal Open</td>
 											  </tr>
 											  <tr>
-											    <td>June 24, 2024</td>
+											    <td><s style="color: red; text-decoration: line-through;">June 24, 2024</s> <br>June 29, 2024</td>
 											    <td>Paper Submission Deadline</td>
 											  </tr>
 											  <!-- <tr>
