Correction in Acronym

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>E</strong>mpowering <strong>ME</strong>dical image computing & <strong>R</strong>esearch through early-career <strong>E</strong>xpertise</a>
+									<a href="index.html" class="logo"><strong>E</strong>mpowering <strong>ME</strong>dical information computing & <strong>R</strong>esearch through early-career <strong>E</strong>xpertise</a>
 									<ul class="icons">
 										<li><a href="https://x.com/MiccaiStudents?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									
