Some more copy edits

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 											<p>The 1st MICCAI Student Board (MSB) Workshop</p>
 										</header>
 										<p>Empowering student researchers in medical imaging through collaborative dialogue and mentorship at the EMERGE workshop.</p>
-										<p>We want to foster the educational and professional development needs of early-career researchers and support them in their journey to become independent investigators and mentors. This workshop, organized by students for students, requires early-career researchers - maximum two years post Ph.D. -  to be primary investigators and occupy the first and last author positions on an 8-page paper. These papers will be published in Springer's LNCS format, and the most outstanding contributions will be invited to expand their work for potential publication in MELBA.</p>
+										<p>We want to foster the educational and professional development needs of early-career researchers and support them in their journey to become independent investigators and mentors. This workshop, organized by students for students, encourages early-career researchers - maximum two years post Ph.D. -  to be primary investigators and occupy the first and last author positions on an 8-page paper. These papers will be published in Springer's LNCS format, and the most outstanding contributions will be invited to expand their work for potential publication in MELBA.
+
+										</p>
+										<b>Note:</b> <i> Young scientists as last authors preferred but not required. We also welcome joint co-last author, and first author papers by young scientists irrespective of last author status. </i>
 									</div>
 									<span class="image object">
 										
