--- a/index.html
+++ b/index.html
@@ -100,8 +100,36 @@
 									<p> The manuscripts can be submitted at <a href="https://openreview.net/group?id=MICCAI.org/2024/Workshop/MSB" target="_blank"> https://openreview.net/group?id=MICCAI.org/2024/Workshop/MSB.</a> </p>
 								</section>			
 
-								<hr class="major" />
+								
 
+							<section id="camerreadysubmission">
+									<header class="major">
+										<h2>Camera Ready Submission</h2>
+									</header>
+									<style>
+										.inner {
+											text-align: justify;
+										}
+									</style>
+									<p>Please submit a PDF version of your paper. Additionally, you will need to submit the following doucments: (i) source files (LaTeX, Word, etc.), (ii) duly signed <i>License to Publish</i> document by one of the authors, and (iii) a separate pdf document outlining the changes made to your paper based on reviewer feedback.
+										
+
+									<p>Camera-Ready Submission Guidelines</p>
+
+									<ol>
+										<li>Page Limit: The submitted manuscript should be a maximum of 9 pages, plus an additional 2 pages for references. The overall paper length must not exceed 11 pages (including appendix and references).</li>
+
+										<li>Paper Number: Please use your two-digit OpenReview submission number for your paper (e.g., use "01" for submission number 1).</li>
+
+										<li>License to Publish: You can find the appropriate form on: <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines</a>. Please be sure to use the following title for the proceedings when completing the License to Publish form: "Medical Information Computing, MImA 2024 + MSB EMERGE 2024 (MICCAI Workshops)".</li>
+
+										<li>ORCID IDs: We request all authors to include their ORCID IDs in the publication. You can find more information about ORCID IDs here: <a href="http://bit.ly/2H5xBpN" target="_blank">http://bit.ly/2H5xBpN</a>.</li>
+									</ol>
+
+									<p>Please update your submission on OpenReview by August 30th, 2024. You can do this by editing your original submission and selecting "Camera Ready Version." The system will allow you to update the following fields: Title, Keywords, TL;DR, Abstract, and Camera-Ready ZIP submission (containing your paper, source code, license, and changes document).</p>
+								</section>			
+
+								<hr class="major" />
 							<!-- Section -->
 								<section, id="deadlines">
 									<header class="major">
@@ -125,7 +153,7 @@
 											    <td>Submission Portal Open</td>
 											  </tr>
 											  <tr>
-											    <td><s style="color:red; text-decoration: line-through;">June 24, 2024 </s> <br>July 1, 2024</td>
+											    <td><s style="color:red; text-decoration: line-through;">June 24, 2024  <br>July 1, 2024</td>
 											    <td>Paper Submission Deadline</td>
 											  </tr>
 											  <!-- <tr>
@@ -143,6 +171,10 @@
 											  <tr>
 											    <td>July 15, 2024</td>
 											    <td>Final Decision</td>
+											  </tr>
+											  <tr>
+											    <td>August 30, 2024</td>
+											    <td>Camera Ready Submission</td>
 											  </tr>
 											  <!-- <tr>
 											    <td>July 26, 2024</td>
@@ -368,6 +400,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="index.html#submission">Submission</a></li>
+										<li><a href="index.html#camerreadysubmission">Camera Ready Instructions</a></li>
 										<li><a href="index.html#deadlines">Deadlines</a></li>
 										<li><a href="index.html#speakers">Speakers</a></li>
 										<li><a href="index.html#orga">Organization</a></li>
