--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 							<section id="camerreadysubmission">
 									<header class="major">
-										<h2>Camera Ready Submission</h2>
+										<h2>Instructions for Camera-Ready Submission</h2>
 									</header>
 									<style>
 										.inner {
