Update the speaker details

--- a/index.html
+++ b/index.html
@@ -187,6 +187,29 @@
 									<header class="major">
 										<h2>Speakers</h2>
 									</header>
+										<div class="speaker-profile">
+											<article style="display: flex; align-items: flex-start;">
+												<span class="image object" style="flex: 0 0 150px;">
+													<img src="images/pictures/mathias-unberath-300x300.jpg" alt="" width="150" height="150"/>
+												</span>
+												<div class="content" style="flex: 1; margin-left:20px; padding:10px;">
+													<h3>Mathias Unberath</h3>
+													<p>Mathias Unberath is the John C. Malone Associate Professor in the Department of Computer Science with secondary appointments in the Departments of <a href="https://www.hopkinsmedicine.org/wilmer">Ophthalmology</a> and <a href="https://www.hopkinsmedicine.org/otolaryngology">Otolaryngology—Head and Neck Surgery</a> at the School of Medicine. He is also a core faculty member of the <a href="https://lcsr.jhu.edu/">Laboratory for Computational Sensing and Robotics</a> (LCSR) and the <a href="https://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a> and an affiliate faculty member in the <a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a>.</p>
+													<p>With his group, the <a href="https://arcade.cs.jhu.edu/">Advanced Robotics and Computationally AugmenteD Environments (ARCADE) Lab</a>, Unberath builds the future of computer-assisted medicine. Through synergistic research on imaging, computer vision, machine learning, and interaction design, he invents human-centered solutions that are embodied in emerging technologies such as mixed reality and robotics.</p>
+													<p>He has published more than 150 journal and conference articles and has received numerous awards, grants, and fellowships, including the National Institute of Biomedical Imaging and Bioengineering Trailblazer R21 Award, an NSF CAREER Award, a Google Research Scholar Award, a Johns Hopkins Career Impact Award, and an inaugural Johns Hopkins Data Science and AI Institute Junior Faculty Award.</p>
+													<p>While completing a bachelor’s in physics and master’s in optical technologies at the Friedrich-Alexander University of Erlangen-Nürnberg (FAU), Unberath also studied at the University of Eastern Finland as an Erasmus Mundus scholar in 2011 and joined Stanford University as a DLR-DAAD fellow in 2014. He received his PhD in computer science from FAU and graduated summa cum laude in 2017. Prior to joining as faculty, Unberath was an assistant research professor in the department and a postdoctoral fellow at LCSR.</p>
+												</div>
+											</article>
+										</div>
+								</section>
+
+
+								<hr class="major" />
+
+								<section, id="schedule">
+									<header class="major">
+										<h2>Schedule for EMERGE workshop 2024</h2>
+									</header>
 										<p>
 											Coming Soon
 										</p>
@@ -403,6 +426,7 @@
 										<li><a href="index.html#camerreadysubmission">Camera Ready Instructions</a></li>
 										<li><a href="index.html#deadlines">Deadlines</a></li>
 										<li><a href="index.html#speakers">Speakers</a></li>
+										<li><a href="index.html#schedule">Schedule</a></li>
 										<li><a href="index.html#orga">Organization</a></li>
 										<li><a href="index.html#pc">Program Committee</a></li>
 									</ul>
