--- a/index.html
+++ b/index.html
@@ -208,11 +208,34 @@
 
 								<section, id="schedule">
 									<header class="major">
-										<h2>Schedule for EMERGE workshop 2024</h2>
+										<h2>Schedule</h2>
 									</header>
-										<p>
-											Coming Soon
-										</p>
+									<table>
+										<thead>
+										  <tr>
+											<th>Time</th>
+											<th>Speaker and Title</th>
+										  </tr>
+										</thead>
+										
+										  <tr>
+											<td>TBD</td>
+											<td>Welcome</td>
+										  </tr>
+										  <tr>
+											<td>TBD</td>
+											<td>------------------------------------------------------------------------------------------------</td>
+										  </tr>
+										  <tr>
+											<td>TBD</td>
+											<td>------------------------------------------------------------------------------------------------</td>
+										  </tr>
+										  <tr>
+											<td>TBD</td>
+											<td>Closing</td>
+										  </tr>
+										</tbody>
+									  </table>
 								</section>
 
 
