--- a/index.html
+++ b/index.html
@@ -219,16 +219,28 @@
 										</thead>
 										
 										  <tr>
-											<td>TBD</td>
-											<td>Welcome</td>
+											<td>08:00 - 08:15</td>
+											<td>Opening Remarks and Introduction</td>
 										  </tr>
 										  <tr>
-											<td>TBD</td>
-											<td>------------------------------------------------------------------------------------------------</td>
+											<td>08:15 - 09:15</td>
+											<td>Oral Session 1:  (3 presenters each 15min + 5min Q&A each)</td>
 										  </tr>
 										  <tr>
-											<td>TBD</td>
-											<td>------------------------------------------------------------------------------------------------</td>
+											<td>09:15 - 10:00</td>
+											<td>Keynote Talk: Mathias Unberath</td>
+										  </tr>
+										  <tr>
+											<td>10:00 - 10:30</td>
+											<td>Break</td>
+										  </tr>
+										  <tr>
+											<td>10:30 - 12:10</td>
+											<td>Oral Session 2:  (5 presenters each 15min + 5min Q&A each)</td>
+										  </tr>
+										  <tr>
+											<td>12:10 - 12:30</td>
+											<td>Closing Remarks and Awards</td>
 										  </tr>
 										  <tr>
 											<td>TBD</td>
