--- a/index.html
+++ b/index.html
@@ -223,8 +223,16 @@
 											<td>Opening Remarks and Introduction</td>
 										  </tr>
 										  <tr>
-											<td>08:15 - 09:15</td>
-											<td>Oral Session 1:  (3 presenters each 15min + 5min Q&A each)</td>
+											<td>08:15 - 08:35</td>
+											<td> 1: Non-Parametric Neighborhood Test-Time Generalization: Application to Medical Image Classification</td>
+										  </tr>
+										  <tr>
+											<td>08:35 - 08:55</td>
+											<td>2: Client Security Alone Fails in Federated Learning: 2D and 3D Attack Insights</td>
+										  </tr>
+										  <tr>
+											<td>08:55 - 09:15</td>
+											<td>3: Context-Guided Medical Visual Question Answering</td>
 										  </tr>
 										  <tr>
 											<td>09:15 - 10:00</td>
@@ -235,8 +243,24 @@
 											<td>Break</td>
 										  </tr>
 										  <tr>
-											<td>10:30 - 12:10</td>
-											<td>Oral Session 2:  (5 presenters each 15min + 5min Q&A each)</td>
+											<td>08:55 - 09:15</td>
+											<td>4: Self-consistent deep approximation of retinal traits for robust and highly efficient vascular phenotyping of retinal colour fundus images</td>
+										  </tr>
+										  <tr>
+											<td>08:55 - 09:15</td>
+											<td>5: GRAM: Graph Regularizable Assessment Metric</td>
+										  </tr>
+										  <tr>
+											<td>08:55 - 09:15</td>
+											<td>6: Unsupervised Analysis of Alzheimer’s Disease Signatures using 3D Deformable Autoencoders	</td>
+										  </tr>
+										  <tr>
+											<td>08:55 - 09:15</td>
+											<td>7: Deep Feature Fusion Framework for Alzheimer’s Disease Staging using Neuroimaging Modalities</td>
+										  </tr>
+										  <tr>
+											<td>08:55 - 09:15</td>
+											<td>8: Explainable Few-Shot Learning for Multiple Sclerosis Detection in Low-Data Regime</td>
 										  </tr>
 										  <tr>
 											<td>12:10 - 12:30</td>
