--- a/index.html
+++ b/index.html
@@ -36,24 +36,8 @@
 						">
 						</header>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content"> 
-										<style>
-											#banner .content p {
-												text-align: center;
-											}
-										</style>
-										<header>
-											<!-- <h1>EMERGE 2025<br /></h1> -->
-											<p>The 2nd MICCAI Student Board (MSB) Workshop</p>
-										</header>
+						 <br> <p style="text-align: center; color: black; font-size: 1.2em;">THE 2ND MICCAI STUDENT BOARD (MSB) WORKSHOP </p> 
 
-
-									</div>
-
-									
-								</section>
 								<section id="news">
 									<div class="content">
 										<header class="major">
