Update the archival and non archival tracks

--- a/index.html
+++ b/index.html
@@ -485,7 +485,12 @@ table td {
 									</header>
 									<div class="section">
 										<p>Submissions will undergo <strong>double-blind peer review</strong> and must follow these guidelines: a maximum of 8 pages for content (including figures and tables), with up to 2 additional pages for references. The paper template and formatting details can be found <a href="https://conferences.miccai.org/2025/en/PAPER-SUBMISSION-GUIDELINES.html" target="_blank">here</a>. Submissions should follow the same guidelines and process as the MICCAI 2025 main conference.</p>
-										<p>Manuscripts must be submitted via the <a href="https://openreview.net/group?id=MICCAI.org/2025/Workshop/MSB_EMERGE" target="_blank">MSB EMERGE 2025 OpenReview submission portal.</a> Each submission will be reviewed by at least three reviewers. For accepted papers, official reviews are anonymous and publicly visible. Rebuttals and preprints will also be made publicly available on the OpenReview platform.</p>
+										<p>Manuscripts must be submitted via the MSB EMERGE 2025 OpenReview submission portal:</p>
+										<ul>
+										<li><a href="https://openreview.net/group?id=MICCAI.org/2025/Workshop/MSB_EMERGE" target="_blank">Archival Track Submission</a></li>
+										<li><a href="https://openreview.net/group?id=MICCAI.org/2025/Workshop/MSB_EMERGE-Non_Archival_Track" target="_blank">Non-Archival Track Submission</a></li>
+										</ul>
+										<p>Each submission will be reviewed by at least three reviewers. For accepted papers, official reviews are anonymous and publicly visible. Rebuttals and preprints will also be made publicly available on the OpenReview platform.</p>
 									</div>
 								</section>			
 
@@ -597,7 +602,7 @@ table td {
 										<h3 style="color: #3e6a88; margin: 0 0 8px 0; font-size: 1.1rem;">Amar Kumar</h3>
 										<p style="margin: 0 0 4px 0; line-height: 1.4; font-size: 0.9rem;">Vice-President, MICCAI Student Board</p>
 										<p style="margin: 0 0 4px 0; line-height: 1.4; font-size: 0.9rem;"><strong>McGill University, Canada</strong></p>
-										<p style="margin: 0; line-height: 1.4; font-size: 0.9rem;"><a href="mailto:amar.kumar@mail.mcgill.ca">Email</a> | <a href="https://www.cim.mcgill.ca/~amarkr/">Website</a></p>
+										<p style="margin: 0; line-height: 1.4; font-size: 0.9rem;"><a href="mailto:amar.kumar@mail.mcgill.ca">Email</a> | <a href="https://amarkr.com">Website</a></p>
 										</div>
 									</article>
 									
