--- a/index.html
+++ b/index.html
@@ -457,25 +457,25 @@ table td {
 											</tr>
 											<tr>
 												<td>Paper submission due</td>
-												<td>June 1, 2025</td>
+												<td><s style="color: red;">June 1, 2025</s> June 25, 2025</td>
 											</tr>
 											<tr>
 												<td>Reviews released to authors</td>
-												<td>June 16, 2025</td>
+												<td><s style="color: red;">June 16, 2025</s> July 9, 2025</td>
 											</tr>
 											<tr>
 												<td>Rebuttals due</td>
-												<td>June 26, 2025</td>
+												<td><s style="color: red;">June 26, 2025</s> July 14, 2025</td>
 											</tr>
 											<tr>
 												<td>Final decisions</td>
-												<td>June 30, 2025</td>
+												<td><s style="color: red;">June 30, 2025</s> July 16, 2025</td>
 											</tr>
 											<tr>
 												<td>Camera-ready due</td>
-												<td>July 7, 2025</td>
+												<td><s style="color: red;">July 7, 2025</s> July 30, 2025</td>
 											</tr>
-										</table>
+																		</table>
 									</div>
 								</section>
 								
