Update Program Committee

--- a/index.html
+++ b/index.html
@@ -695,7 +695,20 @@ table td {
 										<h2>Program Committee</h2>
 									</header>
 									<div class="section">
-										<p>TBA</p>
+										<p>Anneliese Riess, Helmholtz Munich, Germany</p>
+										<p>Daniel M. Lang, Helmholtz Zentrum München, Germany</p>
+										<p>Gurucharan Marthi Krishna Kumar, McGill University, Canada</p>
+										<p>Johannes Kiechle, Technische Universität München, Germany</p>
+										<p>Kumar Abhishek, Simon Fraser University, Canada</p>
+										<p>Laura Alexandra Daza, Helmholtz Zentrum München, Germany</p>
+										<p>Lina Felsner, Technische Universität München, Germany</p>
+										<p>Marta Hasny, Helmholtz Zentrum München, Germany</p>
+										<p>Maxime Di Folco, Technische Universität München, Germany</p>
+										<p>Moritz Fuchs, Technische Universität Darmstadt, Germany</p>
+										<p>Nick Lemke, Technische Universität Darmstadt, Germany</p>
+										<p>Nourhan Bayasi, University of British Columbia, Canada</p>
+										<p>Sameer Ambekar, Technische Universität München, Germany</p>
+										<p>Sushobhan Ghosh, Amazon Research, USA</p>
 									</div>
 								</section>
 						</div>
